<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="24dp"
    tools:context=".ui.wishlist.WishlistSuccessDialogFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:id="@+id/tvFaq"
        android:layout_marginBottom="24dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/tvInfoFaq"
        android:layout_below="@+id/tvFaq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/desc_beta"/>
    <Button
        android:id="@+id/btnClose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvInfoFaq"
        android:text="@string/close" />


</RelativeLayout>