<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.wishlist.DetailWishlistActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above= "@+id/layoutBottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgDetail"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/contentdesc"
                android:scaleType="centerCrop"
                android:src="@color/grey_app"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:textColor="@color/black"
                android:textSize="32sp"/>

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/tvTitleDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"/>
            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/grey_text"
                android:textSize="14sp"
                android:singleLine="false"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"/>

            <TextView
                android:id="@+id/tvTitleLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:id="@+id/tvLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/link"
                android:textColor="@color/grey_text"
                android:textSize="14sp"
                android:linksClickable="true"
                android:autoLink="web"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"/>



        </LinearLayout>



    </ScrollView>

    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:layout_alignParentBottom="true"
        android:background="@color/grey_app">

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:ellipsize="end"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/btnDelete"
            android:contentDescription="@string/contentdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/btnBuy"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_delete_red"/>

        <Button
            android:id="@+id/btnBuy"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:text="@string/terbeli"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:layout_alignParentEnd="true"
            android:background="@drawable/btn_round_black"/>


    </RelativeLayout>

</RelativeLayout>