<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingTop="24dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp"
    tools:context=".ui.profile.ProfileActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description"
        android:src="@drawable/ic_back" />

    <ProgressBar
        android:id="@+id/loadingListWishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgProfile"
        android:layout_width="147dp"
        android:layout_height="147dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        app:srcCompat="@color/black" />

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgProfile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvUsernameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHello"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvCountWish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsernameProfile"
        android:layout_marginTop="16dp"
        android:text="@string/kamu_punya"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvWishProfile"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvCountWish"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/bgEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnHelp"
        android:layout_below="@+id/tvUsernameProfile"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/contentdesc"
        android:src="@drawable/bg_empty_wishlist"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/contentdesc"
        android:src="@drawable/ic_baseline_help_outline_white" />


</RelativeLayout>