<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.wallet.WalletAllTransactionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:contentDescription="@string/app_name"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_transaction"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_list_transaction_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transaction_empty"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_centerInParent="true"
            android:visibility="visible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_list_transaction_wallet_all"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:visibility="gone"/>

    </RelativeLayout>

</LinearLayout>